edit config, add images

--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,8 @@
 {
   "site": {
-    "title": "Hydrogen Nextjs",
+    "title": "AI Creator Stack",
     "base_url": "/",
-    "favicon": "/images/developer.png"
+    "favicon": "/images/ai-creator-stack-profile.webp"
   },
 
   "settings": {
@@ -12,20 +12,20 @@
   },
 
   "profile": {
-    "name": "Michael Caine",
-    "image": "/images/developer.png",
-    "designation": "Front-end developer",
-    "bio": "A Full Stack Front-end Developer based in New York. Meticulous web developer with over 2 years of front end experience and passion for responsive and mobile-first website design."
+    "name": "AI Creator Stack",
+    "image": "/images/ai-creator-stack-profile.webp",
+    "designation": "Join The AI Movement.",
+    "bio": "Explore the Frontier of Digital Innovation."
   },
 
   "params": {
     "contact_form_action": "#",
     "tag_manager_id": "",
-    "copyright": "Copyright © 2022 a theme by [statichunt](https://statichunt.com)"
+    "copyright": "Copyright © 2023 AI Creator Stack"
   },
 
   "metadata": {
-    "meta_author": "Statichunt",
+    "meta_author": "AI Creator Stack",
     "meta_image": "",
     "meta_description": ""
   },
